--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,10 @@
     <h1>Super Store</h1>
   </a>
     <span class="flex-spacer"></span>
-    <button mat-icon-button>
+    <button mat-mini-fab routerLink="/user/profile" matTooltip="Profile" aria-label="User-Profile">
       <mat-icon>account_circle</mat-icon>
     </button>
-    <button mat-icon-button>
+    <button mat-mini-fab routerLink="/user/logout" matTooltip="Logout" aria-label="Logout">
       <mat-icon>lock_open</mat-icon>
     </button>
 </mat-toolbar>
